[#167] - OpenAPI: make every operationId unique
